--- a/src/main/resources/Sokoban/SignUp.fxml
+++ b/src/main/resources/Sokoban/SignUp.fxml
@@ -11,47 +11,35 @@
 
 <AnchorPane fx:id="Pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="633.0" prefWidth="911.0" stylesheets="@Style/SignUpStyle.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Sokoban.Controller.SignUpController">
    <children>
-      <PasswordField fx:id="Password_Ensure" layoutX="397.0" layoutY="389.0" prefHeight="48.0" prefWidth="314.0" promptText="comform your password">
+      <ImageView fitHeight="633.0" fitWidth="945.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Sokoban/pictures/SOKOBAN.png" />
+         </image>
+      </ImageView>
+      <PasswordField fx:id="Password_Ensure" layoutX="298.0" layoutY="382.0" prefHeight="48.0" prefWidth="314.0" promptText="comform your password">
          <font>
             <Font size="24.0" />
          </font></PasswordField>
-      <PasswordField fx:id="Password_input" layoutX="397.0" layoutY="307.0" prefHeight="48.0" prefWidth="314.0" promptText="input your password">
+      <PasswordField fx:id="Password_input" layoutX="298.0" layoutY="293.0" prefHeight="48.0" prefWidth="314.0" promptText="input your password">
          <font>
             <Font size="24.0" />
          </font></PasswordField>
-      <TextField fx:id="Text_Name" layoutX="396.0" layoutY="220.0" prefHeight="48.0" prefWidth="314.0" promptText="input your user name">
+      <TextField fx:id="Text_Name" layoutX="298.0" layoutY="206.0" prefHeight="48.0" prefWidth="314.0" promptText="input your user name">
          <font>
             <Font size="24.0" />
          </font></TextField>
-      <Label fx:id="Label_UserName" layoutX="227.0" layoutY="228.0" prefHeight="32.0" prefWidth="127.0" text="UserName">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
-      <Label fx:id="Label_Password" layoutX="236.0" layoutY="315.0" text="Password">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
-      <Label fx:id="Label_Ensure" layoutX="236.0" layoutY="397.0" text="Comform">
-         <font>
-            <Font size="24.0" />
-         </font></Label>
       <Button fx:id="Btn_SignUp" layoutX="479.0" layoutY="504.0" mnemonicParsing="false" onMouseClicked="#SignUpBtnClicked" prefHeight="48.0" prefWidth="147.0" text="Sign Up">
          <font>
             <Font size="24.0" />
          </font></Button>
-      <Button fx:id="Btn_Return" layoutX="313.0" layoutY="510.0" mnemonicParsing="false" onMouseClicked="#ReturnBtnClicked" text="Return">
+      <Button fx:id="Btn_Return" layoutX="282.0" layoutY="504.0" mnemonicParsing="false" onMouseClicked="#ReturnBtnClicked" prefHeight="48.0" prefWidth="147.0" text="Return">
          <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
          </font></Button>
-      <Label id="Sokoban" fx:id="Label_Sokoban" layoutX="300.0" layoutY="50.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 10, 0.5, 2, 2); -fx-font-weight: bold;" text="Sokoban" textFill="#ef9607">
+      <Label id="Sokoban" fx:id="Label_Sokoban" layoutX="266.0" layoutY="46.0" style="-fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.5), 10, 0.5, 2, 2); -fx-font-weight: bold;" text="Sokoban" textFill="#ef9607">
          <font>
             <Font name="Century" size="96.0" />
          </font>
       </Label>
-      <ImageView fx:id="Img_SUST" fitHeight="150.0" fitWidth="200.0" layoutX="50.0" layoutY="30.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@Sokoban/pictures/SUST.jpeg" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
